--- a/website/movies/templates/index.html
+++ b/website/movies/templates/index.html
@@ -1,3 +1,21 @@
+<!-- cs525 info retrieval front page template -->
+<!-- REFERENCE: http://www.free-css.com/free-css-templates/page212/hydrogen -->
+<!-- Author information below -->
+
+<!--
+//////////////////////////////////////////////////////
+
+FREE HTML5 TEMPLATE
+DESIGNED & DEVELOPED by FREEHTML5.CO
+
+Website: 		http://freehtml5.co/
+Email: 			info@freehtml5.co
+Twitter: 		http://twitter.com/fh5co
+Facebook: 		https://www.facebook.com/fh5co
+
+//////////////////////////////////////////////////////
+ -->
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -13,20 +31,6 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  <!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
